- [R3] Changes to level layout to prevent Knuckles from gliding infinitely
- Many changes to level layouts in general
- Add pause menu when debug mode is inactive
- Fix Tails's tail slightly dislocated when walking on slopes
- Change wrong level names on credits
- Remove debug mode option from Options Menu when playing a Release build
- Slightly change background of R5

** Known bugs

- Collision issues: random speed resets may occur on some wavy ramps, especially
  on  the  Test Level.  This  is  because of  how  collision  is resolved  along
  linecasts, and will be solved at collision refactoring.
- Lack of  360° collision:  The full  360 degree  collision modes  are currently
  deactivated on  code because they  still need  work. Levels presented  in this
  demo do not have big loops, so it is not really a concern for gameplay on main
  levels.
- Small memory leak when respawning level:  For each item monitor respawned when
  the  player dies,  a memory  leak of  a  single byte  or two  may occur  since
  monitors use "extra properties" to determine their subtype. This will be fixed
  soon since object states now have a  proper subtype slot, but this memory leak
  will be insignificant on most scenarios,  and should only cause problems after
  an unrealistic number of respawns.
- Tails's tail  has no  hitbox: When flying,  Tails's tail cannot  be used  as a
  form of attack, so flying underneath bosses and enemies will hurt Tails.
- Characters  may   appear  slightly  above   ground  on  certain   objects  and
  platforms. This behaviour relates to how character rendering works and will be
  fixed once the new 360° collision feature is refactored.

* v0.1 (2025-04-24)

This is the  first version to use semantic versioning.  This makes very profound
changes including the  new Sonic sprites and the addition  of Tails and Knuckles
(sprites by CartoonsAnimate22).

- Change internal project references to SONIC XA instead of Engine